Cherry-pick 22bef8729d8f. rdar://problem/92715090

Obey intrinsic min-height in nested column flex container
    https://bugs.webkit.org/show_bug.cgi?id=240068

    Reviewed by Sergio Villar Senin.

    Fixes a regression from bug 230755. An intrinsic min-height should make
    a column flex container grow enough for its contents, even if it's also
    a flex item with a small definite flex-basis like 0px.

    Test: imported/w3c/web-platform-tests/css/css-flexbox/flex-minimum-height-flex-items-031.html

    Canonical link: https://commits.webkit.org/250912@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294744 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.748@safari-613-branch